outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-22_23-57-19/evaluations/problem_eval-6654579052906487242_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance (0.5) to higher heuristic priority as progress continues, and the escape mechanism allows selecting slightly longer paths (if they are within 1.3x the average distance or 1.1x the minimum cost) to improve solution quality.}
                                                                                                                                                               ^
SyntaxError: invalid decimal literal

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance (0.5) to higher heuristic priority as progress continues, and the escape mechanism allows selecting slightly longer paths (if they are within 1.3x the average distance or 1.1x the minimum cost) to improve solution quality.}
                                                                                                                                                               ^
SyntaxError: invalid decimal literal
